fix collapse housing

--- a/src/styles/Collapse.css
+++ b/src/styles/Collapse.css
@@ -2,7 +2,6 @@
 .collapse.open {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
 }
 
 .collapse .name {
